--- a/base/templates/macros.html
+++ b/base/templates/macros.html
@@ -54,7 +54,7 @@
 
         <div class="post-listing-meta">
              Submitted {{ thread.pretty_date() }} by 
-          <a href="{{ url_for('users.home_page', 
+          <a href="{{ url_for('users.user_profile', 
                 username=thread.user.username) }}">
                 {{ thread.user.username }}</a> 
             to
