--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -12,7 +12,9 @@
     <!-- <link href="css/bootstrap.css" rel="stylesheet"> -->
     <link rel="icon" href="{{ url_for('static', filename='img/upvote.ico') }}" type="image/x-icon">
     {% block css %}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
+        {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />#}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% endblock %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -37,18 +39,14 @@
           <ul class="nav navbar-nav">
               <li>
                   <a class="brand-nav" href="/">
-                      {% if cur_subreddit is defined and cur_subreddit.id != 1 %}
-                          {{ cur_subreddit.name }}
-                      {% else %} 
-                          {{ config.BRAND }}
-                      {% endif %}
+                    <span class='brand-nav-color'>up</span>vote.pub
                   </a>
               </li>
               <li>
-                  <a href='#'>Browse</a>
+                  <a href='{{ url_for('frontends.view_all') }}'>Browse</a>
               </li>
               <li>
-                  <a href="/?trending=true">trending</a>
+                  <a href="/trending">trending</a>
               </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -56,7 +54,7 @@
               <li><a href="{{ url_for('frontends.register', next=request.path) }}">Register</a></li>
               <li><a href="{{ url_for('frontends.login', next=request.path) }}">Login</a></li>
           {% else %}
-              <li><a href="{{ url_for('users.home_page', username=user.username) }}">
+              <li><a href="{{ url_for('users.user_profile', username=user.username) }}">
                       {{ user.username }}&nbsp;{{ user.get_thread_karma() }} <span class="karma-star">★</span> 
               </a>
               </li>
@@ -77,11 +75,9 @@
         </div>
       </div>
 
-      <div class="row main-box">
-      {% block content %}
 
-      {% endblock %}
-      </div>
+      {% block content %}{% endblock %}
+      
 
       <div class="row" class="" id="footer-row">
           <div class="col-lg-12">
