--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -15,8 +15,9 @@
     <br>
     {{ render_field(form.confirm, class="form-control", placeholder="confirm password") }}
     <br>
-    Check to agree to <a href="">terms of services</a> 
-        {{ render_field(form.accept_tos, class="form-control") }}
+    <label class="form-check-label">
+            {{ form.accept_tos }} {{ form.accept_tos.label }}
+    </label>
     <br>
     <button type="submit" value="Register" class="btn btn-primary">Register</button>
   </form>
