--- a/base/templates/subreddits/all.html
+++ b/base/templates/subreddits/all.html
@@ -2,9 +2,13 @@
 
 {% block left %}
   <div class="col-lg-10 thread-submit-box">
-  <h4 class="all-subreddits-label">List of all subreddits.</h4>
-  {% for subreddit in subreddits %}
-        <li><a href="/r/{{ subreddit.name}}/">{{ subreddit.name }}</a></li>
+  <h1 class="all-subreddits-label">List of all subreddits</h1>
+  <h4 />
+  {% for group, group_set in subreddits|groupby('group') %}
+  <h2>{{ group }}</h2>
+        {% for subreddit in group_set %}
+        <li><a href="{{ url_for('subreddits.permalink', subreddit_name = subreddit.name) }}">{{ subreddit.name }}</a></li>
+        {% endfor %}
   {% endfor %}
   </div>
 {% endblock %}
