--- a/base/templates/users/profile.html
+++ b/base/templates/users/profile.html
@@ -2,7 +2,6 @@
 
 {% block left %}
 
-<hr />
 <strong>Threads:</strong> {{ current_user.threads.all()|length() }}</span><br />
 <strong>Thread Karma:</strong> {{ current_user.get_thread_karma() }}<br />
 <strong>Comments:</strong> {{ current_user.comments.all()|length() }}</span><br />
@@ -14,10 +13,10 @@
     <p>
     <a class="profile-listing" href="{{ url_for('threads.thread_permalink', subreddit_name=thread.subreddit.name, thread_id=thread.id, title=slugify(thread.pub_title)) }}">{{ thread.pub_title }}</a>
         <br>
-        <span class="profile-listing-inline"> posted 
-        <a href="{{ config.ROOT_URL }}/threads/{{ thread.subreddit.name }}/{{ thread.id }}/{{ slugify(thread.pub_title) }}">
-            {{ thread.pretty_date() }}</a> in 
-        <a href="/r/{{ thread.subreddit.name }}">{{ thread.subreddit.name }}</a>
+        <span class="profile-listing-inline">{{ thread.pretty_date() }} in 
+        <a href="{{ url_for('subreddits.permalink', subreddit_name = thread.subreddit.name) }}">
+            {{ thread.subreddit.name }}
+        </a>
         </span>
     </p>
 {% endfor %}
@@ -27,7 +26,7 @@
     <p>
     <span class="profile-listing">{{ comment.text }}</span> 
     <span class="profile-listing-inline">
-    <a href="{{ config.ROOT_URL }}/threads/{{ comment.thread.subreddit.name }}/{{ comment.thread.id }}/{{ slugify(comment.thread.title) }}">{{ comment.pretty_date() }}</a>
+    <a href="#">{{ comment.pretty_date() }}</a>
     </p>
     </span>
 {% endfor %}
