--- a/base/templates/threads/permalink.html
+++ b/base/templates/threads/permalink.html
@@ -6,7 +6,7 @@
 
 {% if thread.pub_abstract %}
     <h5>Abstract</h5>
-    <div class='well'>
+    <div class='well jax'>
         {{ thread.pub_abstract }}
     </div>
 {% endif %}
