--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -63,18 +63,20 @@ a.thumbnail:hover {
     font-size: small;
 }
 
-
-.pub_links {
+.pub_links a, .comment-meta a {
     font-weight: 800;
-}
-
-.pub_links a {
     color: #888;
+    margin-right: 20px;
+    display: inline-block;
 }
 
-.pub_links a:hover {
+.pub_links a:hover, .comment-meta a:hover {
     text-decoration: underline;
     color: #666;
+}
+
+.pub_id {
+    font-family: courier;
 }
 
 .no_pdf {
@@ -88,12 +90,32 @@ a.thumbnail:hover {
     color: #d6d6d6;
 }
 
+.comments-element {
+    border-left: 1px dotted #e6e6e6;
+    padding-left: 10px;
+}
+
 .comment-body {
     margin-bottom: 2px;
 }
 
+.comment-meta {
+    font-size: small;
+    font-weight: 600;
+}
+
+.comment-meta:hover a {
+    text-decoration: underline;
+}
+
+.comments-tree {
+    margin-left: -50px;
+}
+
 .comments-element {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
+    margin-left: 50px;
+
 }
 
 .inverse-white-button {
@@ -118,7 +140,7 @@ a.thumbnail:hover {
     margin-bottom: 21px;
 }
 
-#sublist, a {
+#sublist a {
     text-decoration: none;
 }
 
@@ -138,16 +160,12 @@ a.thumbnail:hover {
 
 .nested-comment-text-box {
     display: none;
+    margin: 10px 0px;
     width: 600px;
 }
 
 .nested-submit-comment-button {
     display: none;
-    width: 50px;
-    height: 25px;
-    font-size: 9px;
-    margin-top: -19px;
-    margin-left: 5px;
 }
 
 .main-box {
