--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -52,7 +52,7 @@
                   <a href='{{ url_for('frontends.view_all') }}'>Browse</a>
               </li>
               <li>
-                  <a href="/trending">trending</a>
+                  <a href="/trending">Trending</a>
               </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -83,20 +83,21 @@
 
     </div><!-- /.container -->
 
-    <!-- JavaScript -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39176354-3"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-37131973-4', 'codelucas.com');
-      ga('send', 'pageview');
+      gtag('config', 'UA-39176354-3');
 
-      {# Thumbnails #}
-      $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
-      })
+      {% if user %}
+      gtag('set', {'user_id': "{{ user.username }}"});
+      {% endif %}
+
+    </script>
+
 
     </script>
 
