--- a/base/templates/users/profile.html
+++ b/base/templates/users/profile.html
@@ -8,7 +8,7 @@
 <strong>Comment Karma:</strong> {{ current_user.get_comment_karma() }}
 
 
-<h4 class="profile-label">Recent threads</h4>
+<h4 class="profile-label">Recent submissions</h4>
 {% for thread in current_user.threads.all()[-7:]|reverse  %}
     <p>
     <a class="profile-listing" href="{{ url_for('threads.thread_permalink', subreddit_name=thread.subreddit.name, thread_id=thread.id, title=slugify(thread.pub_title)) }}">{{ thread.pub_title }}</a>
@@ -23,8 +23,7 @@
 
 <h4 class="profile-label">Recent comments</h4>
 {% for comment in current_user.comments.all()[-7:]|reverse %}
-    <p>
-    <span class="profile-listing">{{ comment.text }}</span> 
+    {{ comment.text }}</br> 
     <span class="profile-listing-inline">
     <a href="#">{{ comment.pretty_date() }}</a>
     </p>
