--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -45,7 +45,7 @@
           <ul class="nav navbar-nav">
               <li>
                   <a class="brand-nav" href="/">
-                    <span class='brand-nav-color'>up</span>vote.pub
+                    <span class='brand-nav-color'>up</span>vote.pub <sup>beta</sup>
                   </a>
               </li>
               <li>
