Select subreddits; needs manual validation

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -49,7 +49,7 @@
                   </a>
               </li>
               <li>
-                  <a href='{{ url_for('frontends.view_all') }}'>Browse</a>
+                  <a href='{{ url_for('frontends.view_all') }}'>Subs</a>
               </li>
               <li>
                   <a href="/trending">Trending</a>
