--- a/base/templates/threads/submit_post.html
+++ b/base/templates/threads/submit_post.html
@@ -26,7 +26,7 @@
         <tr>
             <td><a href='http://www.doi.org/' target="_blank">DOI</a></td>
             <td>Digital Object Identifier</td>
-            <td>10.1000/182</td>
+            <td>10.1056/NEJMoa1211592</td>
         </tr>
         <tr>
             <td><a href='https://www.ncbi.nlm.nih.gov/pubmed/' target="_blank">PMID</a></td>
