--- a/base/templates/threads/submit_post.html
+++ b/base/templates/threads/submit_post.html
@@ -14,6 +14,10 @@
   </div>
   <div class='col-lg-6 col-md-6 col-sm-6'>
 
+<div class='well'>
+    In order to submit to <strong>upvote.pub</strong>, you must submit a publication ID. The table below details the IDs supported. For more information on where to find these IDs see the <a href=''>FAQ</a>.
+</div>
+
 <table class="table table-condensed table-hover">
     <thead>
         <tr>
@@ -50,10 +54,6 @@
         </tr>
     </tbody>
 </table>
-
-<div class='well'>
-    In order to submit to <strong>upvote.pub</strong>, you must submit a publication ID. The table above details the IDs supported. For more information on where to find these IDs see the <a href=''>FAQ</a>.
-</div>
 
 </div>
 {% endblock %}
