--- a/base/templates/users/profile.html
+++ b/base/templates/users/profile.html
@@ -25,7 +25,7 @@
 {% for comment in current_user.comments.all()[-7:]|reverse %}
     {{ comment.text }}</br> 
     <span class="profile-listing-inline">
-    <a href="#">{{ comment.pretty_date() }}</a>
+    <a href="#">{{ comment.pretty_date() }}</a> in <a href='{{ url_for('threads.thread_permalink', subreddit_name=comment.thread.subreddit.name, thread_id=comment.thread.id, title=slugify(comment.thread.pub_title)) }}'>{{ comment.thread.pub_title }}</a>
     </p>
     </span>
 {% endfor %}
