--- a/base/templates/404.html
+++ b/base/templates/404.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-lg-9">
+<div class="col-lg-12">
   <h1>404</h1>
-  <p class="lead">Sorry, your page can't be found!</p>
-  <img class="the-404-image" src="https://www.redditstatic.com/reddit404c.png">
+  <hr />
+  <p>Sorry, your page can't be found!</p>
+  {#<img class="the-404-image" src="https://www.redditstatic.com/reddit404c.png">#}
 </div>
 {% endblock %}
