--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -4,19 +4,21 @@
   <div class="row">
   <div class="col-lg-6" style="float: none; margin: 20px auto;">
   {% from "macros.html" import render_field %}
-  <form method="POST" action="." class="form bs-example form-horizontal">
+  <form method="POST" action="." class="form form-horizontal">
     {{ form.csrf_token }}
     <input type="hidden" name="next" value="{{ next }}" />
     {{ render_field(form.username, class="form-control", placeholder="username", autofocus="") }}
     <br>
     {{ render_field(form.email, class="form-control", placeholder="email") }}
-    <br>
+    <small class='text-primary'>Only academic emails are accepted.</small>
+    <br />
+    <br />
     {{ render_field(form.password, class="form-control", placeholder="password") }}
     <br>
     {{ render_field(form.confirm, class="form-control", placeholder="confirm password") }}
     <br>
     <label class="form-check-label">
-            {{ form.accept_tos }} {{ form.accept_tos.label }}
+            {{ form.accept_tos }} <label for="accept_tos">I accept the <a href='#'>terms of service</a></label>
     </label>
     <br>
     <button type="submit" value="Register" class="btn btn-primary">Register</button>
